toolchain/internal/core/analysis/testdata/errors/consts/object_spread_namespaced.vdl
// format:off
// @expect: E206

const baseConfig = { host "localhost" }

const cfg = {
  ...Env.BaseConfig
}
